--- a/style.css
+++ b/style.css
@@ -26,6 +26,30 @@ html {
   scroll-behavior: smooth;
 }
 
+section {
+  padding: 2rem 9%;
+}
+
+section:nth-child(even) {
+  background: #eee;
+}
+
+.btn {
+  margin-top: 1rem;
+  display: inline-block;
+  font-size: 1.7rem;
+  color: #fff;
+  background: var(--black);
+  border-radius: 0.5rem;
+  cursor: pointer;
+  padding: 0.8rem 3rem;
+}
+
+.btn:hover {
+  background-color: var(--green);
+  transform: scale(1.05);
+}
+
 header {
   position: fixed;
   top: 0;
@@ -143,6 +167,50 @@ header .icons #manu-bars {
   font-size: 5rem;
 }
 
+.home .home-slider {
+  padding: 2rem;
+}
+
+.home .home-slider .slide {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  padding-top: 9rem;
+}
+
+.home .home-slider .slide .content {
+  flex: 1 1 45rem;
+}
+
+.home .home-slider .slide .image {
+  flex: 1 1 45rem;
+}
+
+.home .home-slider .slide .image img {
+  width: 100%;
+}
+
+.home .home-slider .slide .content span {
+  color: var(--green);
+  font-size: 2.5rem;
+}
+
+.home .home-slider .slide .content h3 {
+  color: var(--black);
+  font-size: 7rem;
+}
+
+.home .home-slider .slide .content p {
+  color: var(--light-color);
+  font-size: 2rem;
+  padding: 0.5rem 0;
+}
+
+.swiper-pagination-bullet-active {
+  background: var(--green);
+}
+
 /* Media Quries */
 @media (max-width: 991px) {
   html {
@@ -186,10 +254,21 @@ header .icons #manu-bars {
     width: 90%;
     margin: 0 1rem;
   }
+  .home .home-slider .slide .content h3 {
+    font-size: 5rem;
+  }
 }
 
 @media (max-width: 991px) {
   html {
     font-size: 50%;
+  }
+
+  header {
+    padding: 1rem 2rem;
+  }
+
+  section {
+    padding: 2rem;
   }
 }
