--- a/style.css
+++ b/style.css
@@ -588,6 +588,29 @@ header .icons #manu-bars {
   color: var(--green);
 }
 
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 811994;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.loader-container img {
+  width: 35rem;
+}
+
+.loader-container.fade-out {
+  top: 110%;
+  opacity: 0;
+}
+
 /* Media Quries */
 @media (max-width: 991px) {
   html {
